--- a/GraphQL-Learning.csproj
+++ b/GraphQL-Learning.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>GraphQL_Learning</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
+    <PackageReference Include="HotChocolate.Data" Version="15.1.11" />
+    <PackageReference Include="HotChocolate.Types" Version="15.1.11" />
+  </ItemGroup>
+
 </Project>
