➕ Agregar dependencias para Entity Framework Core

--- a/GraphQL-Learning.csproj
+++ b/GraphQL-Learning.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.11" />
     <PackageReference Include="HotChocolate.Data" Version="15.1.11" />
     <PackageReference Include="HotChocolate.Types" Version="15.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
