🔐 Iniciar user secrets
git status

--- a/GraphQL-Learning.csproj
+++ b/GraphQL-Learning.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>GraphQL_Learning</RootNamespace>
+    <UserSecretsId>beddca04-f498-48d2-8a7a-75e2975e5613</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
